# OpenBioFlow

./: .dockerignore  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
.github/: pull_request_template.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
.turbo/cache/: 3a856741e6bd264d-manifest.json  3a856741e6bd264d-meta.json  3a856741e6bd264d.tar.zst  50180354b01e3b32-manifest.json  50180354b01e3b32-meta.json  50180354b01e3b32.tar.zst  99c15e12b3864384-manifest.json  99c15e12b3864384-meta.json  99c15e12b3864384.tar.zst  a114fb56b6ea720f-manifest.json  a114fb56b6ea720f-meta.json  a114fb56b6ea720f.tar.zst
apps/api/: Dockerfile  main.py  pyproject.toml
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Header.tsx  Sidebar.tsx
docs/: api-specification.md  architecture.md  developer-setup.md
infrastructure/docker/: .env.example  docker-compose.yml
infrastructure/kubernetes/: README.md
infrastructure/kubernetes/base/: kustomization.yaml
infrastructure/terraform/: main.tf  variables.tf
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/ai-orchestrator/app/: __init__.py  main.py
services/execution-engine/: Dockerfile  pyproject.toml
services/execution-engine/app/: __init__.py  main.py
services/literature-service/: Dockerfile  pyproject.toml
services/literature-service/app/: __init__.py  main.py
services/report-generator/: Dockerfile  pyproject.toml
services/report-generator/app/: __init__.py  main.py
services/visualization-engine/: Dockerfile  pyproject.toml
services/visualization-engine/app/: __init__.py  main.py
