[project]
name = "ai-orchestrator"
version = "1.0.0"
description = "AI Orchestration Service utilizing Google Gemini API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "google-generativeai>=0.5.4",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.4.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
